# OpticsCore

./: CMakeLists.txt  GuiApp.cpp  GuiApp.h  NumericalSolverOpt.cpp  NumericalSolverOpt.h  OpticalSystem.cpp  OpticalSystem.h  OpticsConstants.h  OpticsExport.h  README.md  animate_optics.py  documentation.txt  main.cpp  optics_c_api.cpp  optics_c_api.h
